--- a/package.yaml
+++ b/package.yaml
@@ -4,7 +4,7 @@ github: "NateV/LegalServerHS"
 license: BSD3
 author: "Nate Vogel"
 maintainer: "example@example.com"
-copyright: "2020 Author name here"
+copyright: "2020 Nate Vogel"
 
 extra-source-files:
   - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/githubuser/LegalServerHS#readme>
+description: Please see the README on GitHub at <https://github.com/NateV/LegalServerHS#readme>
 
 dependencies:
   - base >= 4.7 && < 5
@@ -29,7 +29,7 @@ dependencies:
   - ini == 0.4.1
   - bytestring
   - containers
-  - csv
+  - cassava
 
 library:
   source-dirs: src
